<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    @Value: #ff9a2e

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/back_to_signup1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/back"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:iconPadding="0dp"></ImageButton>

                <TextView
                    android:id="@+id/title_signup2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/choose_user_type"
                    android:textSize="20sp" />

            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gym_user_title"
                    android:layout_width="251dp"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/gym_user"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/dropdown_button_gym_user"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/back"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_drop_down_white_24dp"
                    app:iconPadding="0dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup_gym_user_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/gym_user_description"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progress_bar_gym_user"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">
                </ProgressBar>

                <Button
                    android:id="@+id/signup_button_gym_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_yourself" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FF9800"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/gym_trainer_title"
                    android:layout_width="251dp"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/gym_trainer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/dropdown_button_gym_trainer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/back"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_drop_down_white_24dp"
                    app:iconPadding="0dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup_gym_trainer_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/gym_trainer_description"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progress_bar_gym_trainer"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">
                </ProgressBar>

                <Button
                    android:id="@+id/signup_button_gym_trainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_yourself" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/gym_nutritionist_title"
                    android:layout_width="251dp"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/nutritionist"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/dropdown_button_gym_nutritionist"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/back"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_drop_down_white_24dp"
                    app:iconPadding="0dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup_gym_nutritionist_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/nutritionist_description"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progress_bar_gym_nutritionist"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">
                </ProgressBar>

                <Button
                    android:id="@+id/signup_button_gym_nutritionist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_yourself" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/gym_owner_title"
                    android:layout_width="251dp"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/gym_owner"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/dropdown_button_gym_owner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/back"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_drop_down_white_24dp"
                    app:iconPadding="0dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup_gym_owner_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/gym_owner_description"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progress_bar_gym_owner"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">
                </ProgressBar>

                <Button
                    android:id="@+id/signup_button_gym_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_yourself" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>