<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/signup_bg_shape_2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/signup_bg_shape_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back_to_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="#00FFFFFF"
                android:contentDescription="@string/back"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:iconPadding="0dp" />

            <TextView
                android:id="@+id/titile_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/signup_yourself"
                android:textSize="20sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_signup_textinput_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#00FFFFFF"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastname_signup_textinput_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lastname_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#00FFFFFF"
                            android:hint="@string/lastname"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_signup_textinput_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#00FFFFFF"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"

                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/birthdate_signup_textinput_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        app:helperText="gg/mm/aaaa">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/birthdate_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#00FFFFFF"
                            android:hint="@string/birthdate"
                            android:inputType="date"
                            android:maxLines="1"

                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_signup_textinput_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        app:passwordToggleEnabled="true"

                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#00FFFFFF"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_confirm_signup_textinput_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_confirm_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#00FFFFFF"
                            android:hint="@string/repeat_password"
                            android:inputType="textPassword"
                            android:maxLines="1"

                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ProgressBar
                            android:id="@+id/progress_bar_signup"
                            style="@style/AppTheme"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:visibility="gone"></ProgressBar>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/next_signup_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/next"
                            android:visibility="visible" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>